# OmniERP

./: .gitignore  CMakeLists.txt  CMakeLists.txt.fixed  CMakeLists.txt.new
Area/: Area.cpp  Area.hpp
Area/DTOs/: CreateArea.hpp  GetArea.hpp  UpdateArea.hpp
Area/Models/: Area.hpp
Area/Repositories/: Area.cpp  Area.hpp
BusinessConfig/: BusinessConfig.cpp  BusinessConfig.hpp
BusinessConfig/DTOs/: CreateBusinessConfig.hpp  GetBusinessConfig.hpp  UpdateBusinessConfig.hpp
BusinessConfig/Models/: BusinessConfig.hpp
BusinessConfig/Repositories/: BusinessConfig.cpp  BusinessConfig.hpp
Company/: Company.cpp  Company.hpp
Company/DTOs/: CreateCompany.hpp  GetCompany.hpp  UpdateCompany.hpp
Company/Models/: Company.hpp
Company/Repositories/: Company.cpp  Company.hpp
Customer/: Customer.cpp  Customer.hpp
Customer/DTOs/: CreateCustomer.hpp  UpdateCustomer.hpp
Customer/Models/: Customer.hpp
Customer/Repositories/: Customer.cpp  Customer.hpp
Department/: Department.cpp  Department.hpp
Department/DTOs/: Department.hpp
Department/Models/: Department.hpp
Department/Repositories/: Department.cpp  Department.hpp
Employee/: Employee.cpp  Employee.hpp
Employee/DTOs/: Employee.hpp
Employee/Models/: Employee.hpp
Employee/Repositories/: Employee.cpp  Employee.hpp
Floor/: Floor.cpp  Floor.hpp
Floor/DTOs/: CreateFloor.hpp  GetFloor.hpp  UpdateFloor.hpp
Floor/Models/: Floor.hpp
Floor/Repositories/: Floor.cpp  Floor.hpp
Item/: Item.cpp  Item.hpp
Item/DTOs/: CreateItem.hpp  GetItem.hpp  SearchItems.hpp  UpdateItem.hpp
Item/Models/: Item.hpp
Item/Repositories/: Item.cpp  Item.hpp
ItemBrand/: ItemBrand.cpp  ItemBrand.hpp
ItemBrand/DTOs/: CreateItemBrand.hpp  GetItemBrand.hpp  UpdateItemBrand.hpp
ItemBrand/Models/: ItemBrand.hpp
ItemBrand/Repositories/: ItemBrand.cpp  ItemBrand.hpp
ItemGroup/: ItemGroup.cpp  ItemGroup.hpp
ItemGroup/DTOs/: CreateItemGroup.hpp  GetItemGroup.hpp  UpdateItemGroup.hpp
ItemGroup/Models/: ItemGroup.hpp
ItemGroup/Repositories/: ItemGroup.cpp  ItemGroup.hpp
Module/: Module.cpp  Module.hpp
Module/DTOs/: Module.hpp
Module/Models/: Module.hpp
Module/Repositories/: Module.cpp  Module.hpp
Permission/: Permission.cpp  Permission.hpp
Permission/DTOs/: Permission.hpp
Permission/Models/: Permission.hpp
Permission/Repositories/: Permission.cpp  Permission.hpp
Role/: Role.cpp  Role.hpp
Role/DTOs/: Role.hpp
Role/Models/: Role.hpp
Role/Repositories/: Role.cpp  Role.hpp
RoleModule/: RoleModule.cpp  RoleModule.hpp
RoleModule/DTOs/: RoleModule.hpp
RoleModule/Models/: RoleModule.hpp
RoleModule/Repositories/: RoleModule.cpp  RoleModule.hpp
RolePermission/: RolePermission.cpp  RolePermission.hpp
RolePermission/DTOs/: RolePermission.hpp
RolePermission/Models/: RolePermission.hpp
RolePermission/Repositories/: RolePermission.cpp  RolePermission.hpp
Store/: Store.cpp  Store.hpp
Store/DTOs/: CreateStore.hpp  GetStore.hpp  UpdateStore.hpp
Store/Models/: Store.hpp
Store/Repositories/: Store.cpp  Store.hpp
StoreConfig/: StoreConfig.cpp  StoreConfig.hpp
StoreConfig/DTOs/: CreateStoreConfig.hpp  GetStoreConfig.hpp  SearchStoreConfig.hpp  UpdateStoreConfig.hpp
StoreConfig/Models/: StoreConfig.hpp
StoreConfig/Repositories/: StoreConfig.cpp  StoreConfig.hpp
Table/: Table.cpp  Table.hpp
Table/DTOs/: CreateTable.hpp  GetTable.hpp  UpdateTable.hpp
Table/Models/: Table.hpp
Table/Repositories/: Table.cpp  Table.hpp
UserModule/: UserModule.cpp  UserModule.hpp
UserModule/DTOs/: UserModule.hpp
UserModule/Models/: UserModule.hpp
UserModule/Repositories/: UserModule.cpp  UserModule.hpp
UserPermission/: UserPermission.cpp  UserPermission.hpp
UserPermission/DTOs/: UserPermission.hpp
UserPermission/Models/: UserPermission.hpp
UserPermission/Repositories/: UserPermission.cpp  UserPermission.hpp
